# freyja

./: .codexignore  .gitignore  LICENSE  MANIFEST.io  README.md  pyproject.toml  setup.py
.codex/: AGENTS.md  config.toml  setup.sh
data/: cHMF_reformat_LCDM_wide64_z0.25.hdf5  cosmo_params_LCDM_wide_sample_first_64_z0.25.hdf5  cov_xi02_abcs_small.npy  ng_F5n1_LOWZ-weakvelbias_z0.25.txt  ng_LCDM_LOWZ-weakvelbias_z0.25.txt  pk_mm_linear_LCDM_wide_sample_first_64_z0.25.hdf5  pk_mm_nonlinear_LCDM_wide_sample_first_64_z0.25.hdf5  xiSgcs_F5n1_LOWZ-weakvelbias_z0.25.hdf5  xiSgcs_LCDM_LOWZ-weakvelbias_z0.25.hdf5  xi_mm_LCDM_wide_sample_first_64_z0.25.hdf5
freyja/: __init__.py
freyja/analytical/: xi_1h_gcs.py  xi_1h_gcs_old.py
freyja/cosma/: __init__.py  halo.py  reformatted_data.py  velocity_moment_hh.py  xi_hh.py
freyja/emulators/: __init__.py  halo_bias_diffM.py  halo_linear_bias.py  halo_mass_function.py  halo_velocity_moment.py  pk_mm.py  (+6 more)
paper_figs/: bias_tinker_extrapolation.py  build_xi_hh_data.py  cosmo_params.py  halo_beta_normalized_data.py  halo_beta_normalized_plots.py  halo_vm_data.py  halo_vm_m10_data.py  halo_vm_m10_plots.py  halo_vm_plots.py  hmf_gp.py  matter_pk_emulator.py  plot_xiS024.py  plot_xi_hh_massrange.py  wide_sample_first_64.txt
scripts/: DEGRACE_ECOSMOG_N40_base.npy  DEGRACE_ECOSMOG_N60_base.npy  DEGRACE_ECOSMOG_params_N40.csv  DEGRACE_ECOSMOG_params_N60.csv  Snakefile_GLAMx100.py  config_GLAMx100.yaml  plot_halostr.py  plot_velmom-gcs.py  plot_xi-R-gcs.py  reformat_cosma_processed_data.py  theory_xiS-gcs.py
tests/: streaming_wrapper.py
(+80 files in other folders)
